--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Run test
+name: Runner tests
 
 on:
   push:
@@ -20,14 +20,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Run test
-      run: mvn clean test
-
-   
+      - uses: actions/checkout@v4
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - uses: abhi1693/setup-browser@v0.3.4
+        with:
+          browser: firefox
+          version: latest
+      - name: Test run
+        run: mvn clean test -DsuiteXmlFile='src/test/resources/CrossBrowser.xml'
