--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,10 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+ USERNAME: ${{secrets.USER}}
+ PASSWORD: ${{secrets.PASSWORD}}
+
 jobs:
   build:
 
@@ -32,4 +36,4 @@ jobs:
           browser: firefox
           version: latest
       - name: Test run
-        run: mvn clean test -DsuiteXmlFile='src/test/resources/CrossBrowser.xml'
+        run: mvn clean test  -Duser=$USERNAME -Dpassword=$PASSWORD
