--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Runner tests
+name: Run test
 
 on:
   push:
@@ -14,14 +14,14 @@ on:
   pull_request:
     branches: [ "master" ]
 
-env:
- USERNAME: ${{secrets.USER}}
- PASSWORD: ${{secrets.PASSWORD}}
-
 jobs:
   build:
 
     runs-on: ubuntu-latest
+
+    env:
+      USERNAME: ${{secrets.USER}}
+      PASSWORD: ${{secrets.PASSWORD}}
 
     steps:
       - uses: actions/checkout@v3
@@ -31,9 +31,25 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
-      - uses: abhi1693/setup-browser@v0.3.4
-        with:
-          browser: firefox
-          version: latest
-      - name: Test run
+      - name: Running test
         run: mvn clean test  -Duser=$USERNAME -Dpassword=$PASSWORD
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: target/allure-results
+          allure_history: allure-history
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
